# serverless-practice

./: .gitignore
aws-lambda-intro/: pyproject.toml
aws-lambda-intro/src/: app.py
peter-park/: package-lock.json  requirements.txt  serverless.yml
peter-park-pair-programming/tests/: test_ocr.py
peter-park/src/: handler.py
solution-2/: .env  serverless-copy.yml
solution-2/src/: README.md
solution-2/src/api/: create-users.py
solution-3/: Dockerfile
solution-3/src/: main.py
solution-3/terraform/: lambda.tf  terraform.tf
solution-with-serverless/: dockerfile  package-lock.json  package.json  publish.sh  serverless.yml
solution-with-serverless/src/: main.py
solution-with-terraform/: requirements.txt  serverless.yml
solution-with-terraform/terraform/: ecr.tf  variables.tf
